--- a/texFiles/ElGordo1.tex
+++ b/texFiles/ElGordo1.tex
@@ -560,7 +560,7 @@ simulations of the merger shock of the cosmological simulation from
 \citep{VanWeerenRJ2011}. 
 Right after the collision of the subclusters, both \citet{Paul2011b} and
 \citet{VanWeerenRJ2011} showed that
-merger shock fronts that corresponds to the radio relics 1) are generated
+merger shock fronts that may correspond to the radio relics 1) are generated
 close to the center of the substructure, 2) propagated outwards with  
  the shock speed decreasing only slightly (between 10\% to 30\% via private
  communication with Paul S.) as the
@@ -589,7 +589,7 @@ the collision of the subclusters and the observed time as:
 \end{equation}
 where $0.5 \leq \beta \leq 1.5$ is a factor that we introduce to represent the
 uncertainty of the velocity of the relic shockwave and $v_{3D,1}(t_{col})$ refers to the collisional velocity of
-the NW relic in the center-of-mass frame as a comparison. 
+the NW subcluster in the center-of-mass frame as a comparison. 
 \label{sec: positionprior}
 
 %the springel and farrar shock is NOT applicable to this section get rid of
@@ -652,10 +652,10 @@ the time of observation.
 \subsection{Time-since-collision (TSC) and the merger scenario}
 Both the estimates of $TSC_0$ and $TSC_1$ are
 compatible physical time-scales of observable features of El Gordo.  
-Both estimates are lower than the sound crossing time of $\sim 2 \giga$ yr,
+Both estimates are lower than the sound crossing time of $\sim 2~\giga$ yr,
 which an be considered for which the wake feature can be observed. 
 The observable time scale of the radio relics are also on the scale of
-$\sim 1 \giga yr$. 
+$\sim 1~\giga$yr. 
 Comparison of the estimate of the location of the radio relic in the
 outgoing and returning scenario favors the outgoing scenario.
 The simulation gives two estimates for
@@ -668,7 +668,7 @@ the PDF of the simulated positions of the relic for the outgoing scenario
 the observed position of the relic (light red), with the width of the
 relic representing the 95\% confidence interval, this uncertainty is greater than the width of the relic ($\sim$$23$
 kpc) along merger axis \citep{L13}. When we
-assume $\langle v_{relic} \rangle / v_{3D, NW}(t_{col}) = 1.5$ (uppermost
+assume $\langle v_{relic} \rangle / v_{3D, 1}(t_{col}) = 1.5$ (uppermost
 panel of Figure \ref{fig: positionprior}), $\langle v_{relic} \rangle$
 corresponds to an time-averaged velocity of $\sim 3800~\kilo
 \meter~\second^{-1}$ relative to SE subcluster, or, in the center of
