more complete references

--- a/texFiles/ElGordo1.tex
+++ b/texFiles/ElGordo1.tex
@@ -48,9 +48,9 @@ density functions of the inferred variables. By making use the polarization
 fraction of the radio relic, we are able to constrain the estimate of the
 angle between the sky and the merger axis to be $\alpha = 21\degree
 \pm^9_{11}$.
-The relative 3D merger speed of El Gordo was found to be $\sim 2400 ~\kilo\meter~
+We find the relative 3D merger speed of El Gordo to be $2400 ~\kilo\meter~
 \second^{-1}$. We put our estimates of the time-since-collision into
-context and showed that if the time-averaged shock velocities $\gg 1400~
+context by showing that if the time-averaged shock velocities $\gg 1400~
 \kilo\meter~\second^{-1}$ in the center of mass frame, the two subclusters
 are more likely to be moving away from each other than moving towards each other. 
 Finally, we compare our simulation results with other merging clusters and
@@ -59,9 +59,8 @@ Cluster.
 \end{abstract}
 %-----------------------------------------------------------------------
 \begin{keywords}
-gravitational lensing -- dark matter -- cosmology: observations -- X-rays:
-galaxies: clusters -- galaxies: clusters: individual (ACT-CL J0102-4915) --
-galaxies: high redshift 
+gravitational lensing -- dark matter -- cosmology: observations -- galaxies: clusters: individual (ACT-CL J0102-4915) --
+galaxies: high redshift -- methods: statistical 
 \end{keywords}
 
 %-----------------------------------------------------------------------
@@ -69,14 +68,14 @@ galaxies: high redshift
 Mergers of dark-matter-dominated galaxy clusters probes properties
 of the cluster components like no other systems. 
 Clusters of galaxies are made up of 80\% of dark matter in mass content, 
-with a smaller  portion of intercluster gas($\sim 15\%$ in mass content), and
-sparsely spaced galaxies ($\sim 2\%$ in mass content) (REF). During a merger of
+with a smaller  portion of intercluster gas($\sim15\%$ in mass content), and
+sparsely spaced galaxies ($\sim2\%$ in mass content). During a merger of
 clusters, the subclusters are accelerated to high speeds of several
 thousand \kilo \meter~\second$^{-1}$. The offsets of different components
 of the subclusters dissociate show how various interactions of the different
 components are at work. Observables such as offset between dark
 matter and the other components may suggest dark matter self-interaction
-(REF).  
+(\citealt{Kahlhoefer14}, \citealt{Randall2008d}) .  
 \par
 %(The following sentence does not actually fit in this paragraph and
 %I have to put it somewhere else) difference of the galaxy colors in a merging cluster from relaxed cluster can also verify effects of environment on galaxy evolution.
@@ -87,24 +86,25 @@ matter and the other components may suggest dark matter self-interaction
 %collisional parameters ???
 El Gordo possesses a range of special features that allows us to constrain
 the merger dynamics in multiple ways.  Ever since the discovery of El Gordo
-in the Atacama Camera Telescope (ACT) survey (REF), there is an ongoing effort for
+in the Atacama Camera Telescope survey (ACT; \citealt{Marriage11}), there is an ongoing effort for
 collecting comprehensive data for El Gordo.
-From the spectroscopy and Dressler-Schecter test for the member galaxies  in Sif\'{o}n et al. (2013), El Gordo is confirmed to be a binary merger 
+From the spectroscopy and Dressler-Schecter test for the member galaxies
+in \cite{Sifon13}, El Gordo is confirmed to be a binary merger 
 without significant substructures. This picture is further supported by the
-weak lensing analysis by Jee et al. (2013). The weak lensing analysis shows
+weak lensing analysis by \cite{Jee13}. The weak lensing analysis shows
 a mass ratio of $\sim$2:1  between the two main subclusters, named according to their location as the northeast (NW) and southeast (SE) subclusters respectively. 
 (See Figure \ref{fig:config}). El Gordo has interesting intracluster medium morphology as shown in the X-ray. In the northwest, it shows a wake feature, i.e.,
 depression in the X-ray emissivity, while in the southeast, it shows
 highest X-ray emissivity indicative of a cold gas core southeast of the
 wake. The cold gas core may have passed from the northwest to the southwest
-to have caused this morphology (Menanteau et al. 2011, hereafter M12). 
+to have caused this morphology (\citealt{M12}, hereafter M12). 
 The extended mass distribution of El Gordo also makes it a good
-gravitational lens. Zitrin et al. (2013) have found multiple strong
+gravitational lens. \cite{Zitrin13} have found multiple strong
 gravitationally lensed images around the center region of El Gordo. 
 On the outer skirt of El Gordo, strong radio emission is detected in
 the NW and the SE respectively. These radio emission has steep spectral
 index gradient and are identified as radio relic associated with shockwaves
-created from a merger \citep{Lindner13}. 
+created from a merger \citep{L13}. 
 \begin{figure}
 	\includegraphics[width=\linewidth]{ElGordo.pdf}
 	\caption{Configuration of El Gordo showing approximate overlaid of dark
@@ -117,7 +117,7 @@ created from a merger \citep{Lindner13}.
 		the agencies in the appropriate format). 
 		\label{fig:config}}
 \end{figure}
-El Gordo is one of small sample of galaxy clusters ($\sim 50$) that have
+El Gordo is one of small sample of galaxy clusters ($\sim50$) that have
 been associated with a radio relic and show dissociation between the X-ray
 gas and the DM subclusters. Even fewer of them have been studied in
 great details, making El Gordo a valuable candidate for further analysis.
@@ -297,7 +297,7 @@ where $r_s$ is the characteristic core
 radius of the NFW halo with the mass of El Gordo. According to
 \cite{Ricker98}, the resulting remnant of bimodal cluster mergers would only be
 different when the impact parameter $> 10~ r_{\text{core}}$.
-\cite{Maststropietro2008a} also reported that an impact parameter of $0.1
+\cite{Mastropietro2008a} also reported that an impact parameter of $0.1
 r_{200}$ affected merger dynamics only at the $\sim$10\% level.   
 Other assumptions in this simulation include negligible dynamical friction
 during the merger, negligible mass accretion and negligible self-interaction
@@ -509,7 +509,7 @@ of $\hat{\alpha}
  = 35\degree$. 
 %We consider 39\degree as an upper bound on the projection angle since this idealized model assume isotropic distribution of magnetic field and
 %electrons. 
-This  polarization fraction of $\sim 60\%$ predicted by \citep{E98} is
+This  polarization fraction of $\sim60\%$ predicted by \citep{E98} is
 consistent with the upper bound of relic polarization fraction in cosmological
 simulations \citep{S13}. No other model of the magnetic field should predict a higher polarization fraction, thus it is highly unlikely that we see 33\%
 integrated polarization at $\alpha > 35\degree$.  
@@ -814,9 +814,9 @@ of the two virial radii) to be $> 2250~\kilo \meter~
 system not to be gravitationally bound. The range of projection angles suggested by
 \cite{Molnar14} of $\alpha \gtrsim 45\degree$ are also excluded by our polarization prior.  On the other hand, our simulations show qualitative agreement with
 \cite{Donnert13} on the duration between consecutive core-passages. With
-the time resolution of 25 $\mega$yr, the simulation from \cite{Donnert13} gave an
+the time resolution of 25 $\mega$yr, \cite{Donnert13} gave an
 qualitative estimate of  $T\approx 2~\giga$yr between the first and second
-core-passage in Fig. 6, while our estimate gives $T
+core-passage in Fig. 6 of their work, while our estimate gives $T
 = 1.6~\giga$yr.  A better comparison to the hydrodynamical simulations
 may be achieved by performing Gaussian process emulation to obtain outputs
 with more similar inputs as our simulations, but the work of fair, detailed
@@ -825,8 +825,9 @@ comparison is out of the scope of this paper.
 \subsection{Comparison to other merging clusters of galaxies}
 %\input{4.3_comparison_merger}
 Dynamical properties of El Gordo are more similar to the Bullet Cluster
-(cite cite)
-than the Musketball Cluster (\cite{Dawson12}, \citetalias{D13}). Both the Bullet Cluster and the Musketball
+(\citealt{Bradac2008b},\citealt{Springel2007},
+\citealt{Mastropietro2008a})
+than the Musketball Cluster (\citealt{Dawson12}, \citetalias{D13}). Both the Bullet Cluster and the Musketball
 were studied by \citetalias{D13} using the Monte Carlo simulation.
 In addition to the default prior, \citetalias{D13} applied a temporal prior
 based on the observed X-ray luminosity boost for the Bullet Cluster, while
@@ -854,7 +855,7 @@ self-interaction of dark matter.
 We note that our method of inferring the 3D velocities by deprojecting the
 radial velocities might not be optimal but is commonly used (\citetalias{M12},
 \citealt{Dawson12}). The relative
-radial velocities are dependent on the identification subcluster members.
+radial velocities are dependent on the identification of subcluster members.
 However, it is unclear that a spatial
 cut according to number density peaks would be optimal for selecting
 galaxies that represent the underlying velocities of the subclusters. Traditionally, grouping members
@@ -862,14 +863,16 @@ may be treated as a (statistical) clustering problem with well known
 methods such as normal mixture model. However, our setting is complicated
 by the fact that each of the observed redshifts of galaxies is an unknown combination of cosmological redshift
 and redshift due to peculiar motion along the line-of-sight. Our study
-only make use of a limited number of galaxies with spectroscopy
+only made use of a limited number of galaxies with spectroscopy
 information. This could cause selection bias and incompleteness due to
 limitations of the of spectroscopic targets. Existing
 literature and tests mostly focus on detecting substructures in galaxy
-clusters through non-Gaussianity of the velocity dispersion (Dressler,
-Einasto). Few extensive studies have focused on finding out the uncertainties
+clusters through non-Gaussianity of the velocity dispersion
+(\citealt{Dressler88},
+\citealt{Einasto12}). Few extensive studies have focused on finding out the uncertainties
 associated with this clustering procedure for inferring the dynamics of
-merging clusters. This problem presents an interesting direction for investigation in the future.   
+merging clusters. This problem of inferring galaxies to best reflect
+subcluster dynamics presents an interesting direction for investigation in the future.   
  
 Despite the limitations and simplifying assumptions, this work provides
 insight to the merger dynamics and configuration of El Gordo as a basis for further studies.
