--- a/texFiles/ElGordo1.tex
+++ b/texFiles/ElGordo1.tex
@@ -367,8 +367,8 @@ radial velocity difference of the two subclusters to be
 $476~\pm~242~\kilo\meter~\second^{-1}$. 
 The quoted radial velocity differences of $586~\kilo \meter~\second^{-1}$ reported by \citetalias{M12} 
 is higher than our estimates but within the 68\% bias-corrected
-confidence interval. Limitations and possible improvements of this method
-are provided in the discussion. 
+confidence interval. Limitations and possible improvements of this analyze
+of $v_{rad}$ are provided in the discussion. 
 %The estimate from the approximation of $\Delta v_{rad}
 %= c(z_1 - z_2) / (1 + z_1)$ in the frame of the NW subcluster. 
 
