--- a/texFiles/ElGordo1.tex
+++ b/texFiles/ElGordo1.tex
@@ -219,7 +219,7 @@ possesses the most extended geometry (0.56 Mpc in length)
 among all radio source, was identified to be associated with the
 merger. We do not refer to the SUMSS SE nor the E radio relic in this paper
 since the upstream velocity of those radio relics are not reported in
-\citet{L13}.    
+\citet{L13} for qualitative comparisons.    
 %\input{2.0_data_section.tex}
 
 \section{METHOD -- Monte Carlo simulation} 
@@ -679,12 +679,14 @@ v_{3D,1}(t_{col})$, we probe how much the shock could have slowed down
 and still be consistent with the outgoing scenario. The second (relative
 velocity of $2800~\kilo\meter~\second^{-1}$) and third row of
 Fig. \ref{fig: positionprior} show that if $\langle v_{relic} \rangle
-\lesssim 1.1 $, the returning scenario would be favored instead.
-A definite conclusion about the best fit scenario would require better
+\lesssim 1.1 $, the returning scenario would be favored instead. A definite conclusion about the best fit scenario would require better
 knowledge of the time evolution of the shock velocities. 
-%Estimates of \citet{L13} of the shock velocity corresponds to $2500 \pm
-%^{400}_{300} \kilo \meter~\second^{-1}$, relative to the surrounding
-%intracluster medium. 
+The reported NW shock velocity $2500
+\pm^{400}_{300}~\kilo\meter~\second^{-1}$ by \cite{L13} was with respect to
+the turbulent intracluster medium (ICM). It is unclear what the bulk motion
+of the ICM would be at the time of observation and how to ensure the frame of
+references of our simulation outputs and the observation are consistent for
+comparison.  
 
 
 %The hydrodynamical simulation of \cite{Donnert13} shows significant energy
