Added LLNL auspices statement to acknowledgements section.

--- a/texFiles/ElGordo1.tex
+++ b/texFiles/ElGordo1.tex
@@ -923,6 +923,7 @@ radio relic as prior. We appreciate the comments from Maru\v{s}a
 Brada\v{c} about using the position of the relic to break degeneracy
 of the merger scenario. KN is grateful to Paul Baines and Tom Toredo for
 discussion of the use of Bayesian priors and sensitivity tests. 
+Part of this work performed under the auspices of the U.S. DOE by LLNL under Contract DE-AC52-07NA27344.
 %the discussion of the design of Monte Carlo filters and sensitivity tests.   
 
 
