--- a/texFiles/ElGordo1.tex
+++ b/texFiles/ElGordo1.tex
@@ -34,14 +34,14 @@ and determine 3D configuration of a cluster merger, ACT-CL J0102-4915, El Gordo.
 From the double radio relic observation and X-ray wake morphology, 
 it is believed that El Gordo is observed shortly after the first
 core-passage of the subclusters.
-At a redshift of 0.87, El Gordo (M$_{200c} = 
-2.75\times10^{15} \pm^{7.4}_{1.5}$ M$_{\sun}$) is one of the most massive
-clusters discovered in the early universe. The two subclusters of El
-Gordo has a mass ratio of around 2:1. 
-The X-ray and weak-lensing data of El Gordo show an offset of X kpc between
-the intracluster gas and the dark matter (DM) at $\sim$4 $\sigma$ level.
-All these features of El Gordo make it part of a valuable class of
-dissociative mergers that can probe the self-interaction of dark matter.
+%At a redshift of 0.87, El Gordo (M$_{200c} = 
+%2.75\times10^{15} \pm^{7.4}_{1.5}$ M$_{\sun}$) is one of the most massive
+%clusters discovered in the early universe. The two subclusters of El
+%Gordo has a mass ratio of around 2:1. 
+%The X-ray and weak-lensing data of El Gordo show an offset of X kpc between
+%the intracluster gas and the dark matter (DM) at $\sim$4 $\sigma$ level.
+%All these features of El Gordo make it part of a valuable class of
+%dissociative mergers that can probe the self-interaction of dark matter.
 We employ a Monte Carlo simulation to investigate the three-dimensional (3D)
 configuration and dynamics of El Gordo and provide a summary of the probability
 density functions of the inferred variables. By making use the polarization
@@ -67,7 +67,7 @@ galaxies: high redshift -- methods: statistical
 \section{Introduction} 
 Mergers of dark-matter-dominated galaxy clusters probes properties
 of the cluster components like no other systems. 
-Clusters of galaxies are made up of 80\% of dark matter in mass content, 
+Clusters of galaxies are made up of $\sim80\%$ of dark matter in mass content, 
 with a smaller  portion of intercluster gas($\sim15\%$ in mass content), and
 sparsely spaced galaxies ($\sim2\%$ in mass content). During a merger of
 clusters, the subclusters are accelerated to high speeds of several
@@ -921,7 +921,7 @@ their knowledge on the simulated properties of radio relic. We
 extend our gratitude to Reinout Van Weeren for first proposing the use of
 radio relic as prior. We appreciate the comments from Maru\v{s}a
 Brada\v{c} about using the position of the relic to break degeneracy
-of the merger scenario. KN is grateful to Paul Baines and Tom Toredo for
+of the merger scenario. KN is grateful to Paul Baines and Tom Loredo for
 discussion of the use of Bayesian priors and sensitivity tests. 
 Part of this work was performed under the auspices of the U.S. DOE by LLNL under Contract DE-AC52-07NA27344.
 %the discussion of the design of Monte Carlo filters and sensitivity tests.   
